#248 Better samples openapi spec
